--- a/src/content/hello.jade
+++ b/src/content/hello.jade
@@ -2,6 +2,10 @@
 title: Grid
 component: ContentPage
 ---
+mixin breadcrumb
+  ol.breadcrumb
+    li <a href="/">Home</a>
+    li <a href="/privacy">Privacy</a>
 p.
   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean consequat
   tortor fermentum mi fermentum dignissim. Nullam vel ipsum ut ligula elementum
