--- a/src/components/ContactPage/ContactPage.css
+++ b/src/components/ContactPage/ContactPage.css
@@ -1,9 +1,17 @@
 /* React Starter Kit | MIT License | http://www.reactstarterkit.com/ */
 
 @import '../variables.css';
-
+.ContactPage {
+  margin: auto;
+  padding-top: 60px;
+  padding-left: 60px;
+  display: flex;
+  max-width: 1340px;
+}
 .ContactPage-container {
-  margin: 0 auto;
-  padding: 0 0 40px;
-  max-width: var(--max-content-width);
+  background-color: #fff;
+  margin-left:40px;
+  height:255px;
+  width:75%;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.2);
 }
