--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,31 +4,46 @@
 
 :root {
   --brand-color: #61dafb;
+
 }
 
 .Header {
-  background: #373277;
-  color: #fff;
+  padding: 20px 0 0 60px;
+  width: 100%;
+  height:50px;
+  background: white;
+
+
+
+
 }
 
 .Header-container {
+  display: flex;
+  justify-content: space-between;
   margin: 0 auto;
-  padding: 20px 0;
-  max-width: var(--max-content-width);
+  max-width: 1340px;
+
+
+
 }
 
 .Header-brand {
   color: color(var(--brand-color) lightness(+10%));
   text-decoration: none;
   font-size: 1.75em; /* ~28px */
+  height:30px;
 }
-
+.Header-brandImg {
+  height:40px;
+}
 .Header-brandTxt {
   margin-left: 10px;
 }
 
 .Header-nav {
-  float: right;
+
+  display: inline-block;
   margin-top: 6px;
 }
 
