--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,4 +1,3 @@
-/* React Starter Kit | MIT License | http://www.reactstarterkit.com/ */
 
 .Navigation-link {
   display: inline-block;
@@ -10,11 +9,11 @@
 .Navigation-link,
 .Navigation-link:active,
 .Navigation-link:visited {
-  color: rgba(255, 255, 255, .6);
+  color: #333333;
 }
 
 .Navigation-link:hover {
-  color: rgba(255, 255, 255, 1);
+  color: #333333;
 }
 
 .Navigation-link--highlight {
@@ -22,7 +21,7 @@
   margin-left: 8px;
   border-radius: 3px;
   background: rgba(0, 0, 0, .15);
-  color: #fff;
+  color: #333333;
 }
 
 .Navigation-link--highlight:hover {
